--- a/python/listas_enlazadas.ipynb
+++ b/python/listas_enlazadas.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
     "        # Updating the Nodes’ Next Pointers\n",
     "        temp = node1.get_next_node()\n",
     "        node1.set_next_node(node2.get_next_node())\n",
-    "        node2.get_next_node(temp)\n",
+    "        node2.set_next_node(temp)\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return self.stringify_list()"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -285,19 +285,8 @@
      "output_type": "stream",
      "text": [
       "9 --> 8 --> 7 --> 6 --> 5 --> 4 --> 3 --> 2 --> 1 --> 0 \n",
-      "Swapping 9 with 5\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "get_next_node() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3220\\2880282263.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m   \u001b[0mll\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert_beginning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mll\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mll\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mswap_nodes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#print(ll)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3220\\285672226.py\u001b[0m in \u001b[0;36mswap_nodes\u001b[1;34m(self, val1, val2)\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[0mtemp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnode1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_next_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \u001b[0mnode1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_next_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnode2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_next_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mnode2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_next_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: get_next_node() takes 1 positional argument but 2 were given"
+      "Swapping 9 with 5\n",
+      "5 --> 8 --> 7 --> 6 --> 9 --> 4 --> 3 --> 2 --> 1 --> 0 \n"
      ]
     }
    ],
@@ -308,7 +297,456 @@
     "  ll.insert_beginning(i)\n",
     "print(ll)\n",
     "ll.swap_nodes(9, 5)\n",
-    "#print(ll)"
+    "print(ll)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Código swap como función\n",
+    "\n",
+    "A continuación se implementa el codigo swap como funcion:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 --> 8 --> 7 --> 6 --> 5 --> 4 --> 3 --> 2 --> 1 --> 0 \n",
+      "Swapping 9 with 5\n",
+      "5 --> 8 --> 7 --> 6 --> 9 --> 4 --> 3 --> 2 --> 1 --> 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_nodes(input_list, val1, val2):\n",
+    "  print(f'Swapping {val1} with {val2}')\n",
+    "\n",
+    "  node1_prev = None\n",
+    "  node2_prev = None\n",
+    "  node1 = input_list.head_node\n",
+    "  node2 = input_list.head_node\n",
+    "\n",
+    "  if val1 == val2:\n",
+    "    print(\"Elements are the same - no swap needed\")\n",
+    "    return\n",
+    "\n",
+    "  while node1 is not None:\n",
+    "    if node1.get_value() == val1:\n",
+    "      break\n",
+    "    node1_prev = node1\n",
+    "    node1 = node1.get_next_node()\n",
+    "\n",
+    "  while node2 is not None:\n",
+    "    if node2.get_value() == val2:\n",
+    "      break\n",
+    "    node2_prev = node2\n",
+    "    node2 = node2.get_next_node()\n",
+    "\n",
+    "  if (node1 is None or node2 is None):\n",
+    "    print(\"Swap not possible - one or more element is not in the list\")\n",
+    "    return\n",
+    "\n",
+    "  if node1_prev is None:\n",
+    "    input_list.head_node = node2\n",
+    "  else:\n",
+    "    node1_prev.set_next_node(node2)\n",
+    "\n",
+    "  if node2_prev is None:\n",
+    "    input_list.head_node = node1\n",
+    "  else:\n",
+    "    node2_prev.set_next_node(node1)\n",
+    "\n",
+    "  temp = node1.get_next_node()\n",
+    "  node1.set_next_node(node2.get_next_node())\n",
+    "  node2.set_next_node(temp)\n",
+    "\n",
+    "\n",
+    "ll = LinkedList()\n",
+    "for i in range(10):\n",
+    "  ll.insert_beginning(i)\n",
+    "\n",
+    "print(ll.stringify_list())\n",
+    "swap_nodes(ll, 9, 5)\n",
+    "print(ll.stringify_list())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two-Pointer Linked List Techniques"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> * **Goal**: Learn how to approach Linked List problems with multiple iterator pointers.\n",
+    "\n",
+    "Many common singly linked list problems can be solved by iterating with two pointers. This is sometimes known as the runner technique:\n",
+    "* https://dev.to/elmarshall/linked-lists-and-the-runner-technique-bao\n",
+    "* https://jaykalia07.medium.com/linked-lists-and-the-runner-technique-8e70e5433389#:~:text=The%20runner%20technique%20means%20that,the%20slow%20node%20iterates%20through.\n",
+    "* https://kodr.me/en/linked-list-intro\n",
+    "* https://j8ahmed.com/2022/09/24/day-87-the-runner-technique-linked-lists/\n",
+    "* https://skilled.dev/course/linked-lists\n",
+    "  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Aproximación 1**\n",
+    "\n",
+    "* a list to store a representation of the linked list\n",
+    "* If the linked list has one million nodes, we’ll need one million pointers in a list to keep track of it! An approach like this results in an extra O(n) space being allocated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_nth_last(linked_list, n):\n",
+    "   linked_list_as_list = []\n",
+    "   current_node = linked_list.head_node\n",
+    "   while current_node:\n",
+    "    linked_list_as_list.append(current_node)\n",
+    "    current_node = current_node.get_next_node()\n",
+    "   return linked_list_as_list[len(linked_list_as_list) - n]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Aproximación 2**\n",
+    "* Instead of creating an entire parallel list, we can solve this problem by using two pointers at different positions in the list but moving at the same rate.\n",
+    "\n",
+    "**Pseudocodigo**\n",
+    "\n",
+    "```\n",
+    "nth last pointer = None\n",
+    "tail pointer = linked list head\n",
+    "count = 1\n",
+    "\n",
+    "while tail pointer exists\n",
+    "  move tail pointer forward\n",
+    "  increment count\n",
+    "\n",
+    "  if count >= n + 1\n",
+    "    if nth last pointer is None\n",
+    "      set nth last pointer to head\n",
+    "    else\n",
+    "      move nth last pointer forward\n",
+    "\n",
+    "return nth last pointer\n",
+    "```\n",
+    "\n",
+    "Let’s visualize the steps of the algorithm through the following example, where we want to obtain the 2nd to last node of the linked list. T represents the tail pointer and N represents the nth last pointer. For each iteration of the while loop, we will also keep track of the count value.\n",
+    "\n",
+    "* Starting State\n",
+    "\n",
+    "```\n",
+    "count = 1\n",
+    "T\n",
+    "\n",
+    "1  2  3  4  5\n",
+    "```\n",
+    "\n",
+    "* First Tick\n",
+    "\n",
+    "```\n",
+    "count = 2\n",
+    "   T\n",
+    "\n",
+    "1  2  3  4  5\n",
+    "```\n",
+    "\n",
+    "* Second Tick\n",
+    "\n",
+    "```\n",
+    "count = 3\n",
+    "      T\n",
+    "N\n",
+    "1  2  3  4  5\n",
+    "```\n",
+    "\n",
+    "* Third Tick\n",
+    "\n",
+    "```\n",
+    "count = 4\n",
+    "         T\n",
+    "   N\n",
+    "1  2  3  4  5\n",
+    "```\n",
+    "\n",
+    "* Fourth Tick\n",
+    "\n",
+    "```\n",
+    "count = 5\n",
+    "            T\n",
+    "      N\n",
+    "1  2  3  4  5\n",
+    "```\n",
+    "\n",
+    "* Final Tick\n",
+    "\n",
+    "```\n",
+    "count = 6\n",
+    "               T\n",
+    "         N\n",
+    "1  2  3  4  5  None\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 --> 2 --> 3 --> 4 --> 5 --> 6 --> 7 --> 8 --> 9 --> 10 --> 11 --> 12 --> 13 --> 14 --> 15 --> 16 --> 17 --> 18 --> 19 --> 20 --> 21 --> 22 --> 23 --> 24 --> 25 --> 26 --> 27 --> 28 --> 29 --> 30 --> 31 --> 32 --> 33 --> 34 --> 35 --> 36 --> 37 --> 38 --> 39 --> 40 --> 41 --> 42 --> 43 --> 44 --> 45 --> 46 --> 47 --> 48 --> 49 --> 50 \n",
+      "48\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "nth last pointer = None\n",
+    "tail pointer = linked list head\n",
+    "count = 1\n",
+    "\n",
+    "while tail pointer exists\n",
+    "  move tail pointer forward\n",
+    "  increment count\n",
+    "\n",
+    "  if count >= n + 1\n",
+    "    if nth last pointer is None\n",
+    "      set nth last pointer to head\n",
+    "    else\n",
+    "      move nth last pointer forward\n",
+    "\n",
+    "return nth last pointer\n",
+    "\"\"\"\n",
+    "\"\"\" Solucion propia\n",
+    "def nth_last_node(linked_list, n):  \n",
+    "  nth_last_node = None\n",
+    "  tail_node = linked_list.get_head_node()\n",
+    "  count = 1\n",
+    "  while tail_node is not None:\n",
+    "    tail_node = tail_node.get_next_node()\n",
+    "    # print(\"- Count: \" + str(count) + \"- T: \"+ str(tail_node) + \" - N: \" +  str(nth_last_node))\n",
+    "    count += 1\n",
+    "    if count >= n + 1:\n",
+    "      if nth_last_node is None:\n",
+    "        nth_last_node = linked_list.get_head_node()\n",
+    "      else:\n",
+    "        nth_last_node = nth_last_node.get_next_node()\n",
+    "  return nth_last_node\n",
+    "\"\"\"\n",
+    "\n",
+    "# Solucion codecademy\n",
+    "def nth_last_node(linked_list, n):\n",
+    "  current = None\n",
+    "  tail_seeker = linked_list.head_node\n",
+    "  count = 1\n",
+    "  while tail_seeker:\n",
+    "    tail_seeker = tail_seeker.get_next_node()\n",
+    "    count += 1\n",
+    "    if count >= n + 1:\n",
+    "      if current is None:\n",
+    "        current = linked_list.head_node\n",
+    "      else:\n",
+    "        current = current.get_next_node()\n",
+    "  return current\n",
+    "\n",
+    "def generate_test_linked_list():\n",
+    "  linked_list = LinkedList()\n",
+    "  for i in range(50, 0, -1):\n",
+    "    linked_list.insert_beginning(i)\n",
+    "  return linked_list\n",
+    "\n",
+    "# Use this to test your code:\n",
+    "test_list = generate_test_linked_list()\n",
+    "print(test_list.stringify_list())\n",
+    "nth_last = nth_last_node(test_list, 4)\n",
+    "print(nth_last.value)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pointers at Different Speeds\n",
+    "\n",
+    "Let’s take a look at one of those problems and consider a new strategy that uses two pointers moving at different speeds.\n",
+    "\n",
+    "* **Aproximación 1**: it’s possible to find a solution by iterating through the entire list, creating a list representation, and then returning the middle index. \n",
+    "\n",
+    "```\n",
+    "create list\n",
+    "while the linked list has not been fully iterated through\n",
+    "  push the current element onto list\n",
+    "  move forward one node\n",
+    "return list[length / 2]\n",
+    "```\n",
+    "\n",
+    "* **Aproximación 2**: we can use two pointers to move through the linked list. The first pointer takes two steps through the linked list for every one step that the second takes, so it iterates twice as fast\n",
+    "\n",
+    "```\n",
+    "fast pointer = linked list head\n",
+    "slow pointer = linked list head\n",
+    "while fast pointer is not None\n",
+    "  move fast pointer forward\n",
+    "  if the end of the linked list has not been reached\n",
+    "    move fast pointer forward\n",
+    "    move slow pointer forward\n",
+    "return slow pointer\n",
+    "```\n",
+    "\n",
+    "Prueba: Let’s visualize the steps of the algorithm:\n",
+    "\n",
+    "* Starting State\n",
+    "\n",
+    "```\n",
+    "F\n",
+    "S\n",
+    "1  2  3  4  5  6  7\n",
+    "```\n",
+    "\n",
+    "* First Tick\n",
+    "\n",
+    "```\n",
+    "      F\n",
+    "   S\n",
+    "1  2  3  4  5  6  7\n",
+    "```\n",
+    "\n",
+    "* Second Tick\n",
+    "\n",
+    "```\n",
+    "            F\n",
+    "      S\n",
+    "1  2  3  4  5  6  7\n",
+    "```\n",
+    "\n",
+    "* Third Tick\n",
+    "\n",
+    "```\n",
+    "                  F\n",
+    "         S\n",
+    "1  2  3  4  5  6  7\n",
+    "```\n",
+    "\n",
+    "* Final Tick\n",
+    "\n",
+    "```\n",
+    "                     F\n",
+    "         S\n",
+    "1  2  3  4  5  6  7  None\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 --> 2 --> 3 --> 4 --> 5 --> 6 --> 7 \n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" Solucion 1\n",
+    "def find_middle(linked_list):\n",
+    "  fast_pointer = linked_list.get_head_node()\n",
+    "  slow_pointer = linked_list.get_head_node()\n",
+    "  while fast_pointer:\n",
+    "    fast_pointer = fast_pointer.get_next_node()\n",
+    "    if fast_pointer:\n",
+    "      fast_pointer = fast_pointer.get_next_node()\n",
+    "      slow_pointer = slow_pointer.get_next_node()\n",
+    "  return slow_pointer\n",
+    "\"\"\"\n",
+    "\n",
+    "# Solucion codeacademy\n",
+    "def find_middle(linked_list):\n",
+    "  fast = linked_list.head_node\n",
+    "  slow = linked_list.head_node\n",
+    "  while fast:\n",
+    "    fast = fast.get_next_node()\n",
+    "    if fast:\n",
+    "      fast = fast.get_next_node()\n",
+    "      slow = slow.get_next_node()\n",
+    "  return slow\n",
+    "\n",
+    "# Velocidad de la mitad\n",
+    "def find_middle_alt(linked_list):\n",
+    "  count = 0\n",
+    "  fast = linked_list.head_node\n",
+    "  slow = linked_list.head_node\n",
+    "  while fast:\n",
+    "    fast = fast.get_next_node()\n",
+    "    if count % 2 != 0:\n",
+    "      slow = slow.get_next_node()\n",
+    "    count += 1\n",
+    "  return slow\n",
+    "\n",
+    "\n",
+    "def generate_test_linked_list(length):\n",
+    "  linked_list = LinkedList()\n",
+    "  for i in range(length, 0, -1):\n",
+    "    linked_list.insert_beginning(i)\n",
+    "  return linked_list\n",
+    "\n",
+    "# Use this to test your code:\n",
+    "test_list = generate_test_linked_list(7)\n",
+    "print(test_list.stringify_list())\n",
+    "middle_node = find_middle(test_list)\n",
+    "print(middle_node.value)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota importante**: No dan los mismos resultados que en la plataforma. Revisar ya que pueden segun esto, haber errores."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "Many linked list problems can be solved with the two-pointer technique. If it seems like a linked list problem requires keeping track of multiple positions or creating other data representations (such as using a list), consider whether two pointers iterating in parallel or at different speeds could help solve the problem efficiently. We didn’t cover full solutions to these here, but variations on the two-pointer technique can be used to:\n",
+    "* Detect a cycle in a linked list\n",
+    "* Rotate a linked list by k places"
    ]
   }
  ],
